# Converge

./: .gitignore  CLAUDE.md  HANDBOOK.md  NOTE.md  README.md  converge_import_template.xlsx  pyproject.toml  requirements.txt  使用手冊.md
app/: plotting.py  streamlit_app.py
converge/: __init__.py  calendar.py  distributions.py  engine.py  examples.py  io.py  network.py  results.py  risk_drivers.py  sampling.py
tests/: test_benchmarks.py  test_convergence.py  test_distributions.py  test_io_import.py  test_merge_bias.py  test_network_relationships.py  test_risk_drivers.py
