[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "converge"
version = "1.0.0"
description = "Schedule Risk Analysis engine with Monte Carlo simulation and validation bench"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0,<2",
    "numpy>=1.26.0,<3",
    "scipy>=1.13.0,<2",
    "pandas>=2.2.0,<3",
    # plotly<6 + kaleido==0.2.1: self-contained static export (no Chrome needed)
    "plotly>=5.22.0,<6",
    "kaleido==0.2.1",
    "openpyxl>=3.1.0,<4",
]

[project.scripts]
converge = "app.streamlit_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["converge*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
